--- a/index.html
+++ b/index.html
@@ -87,16 +87,15 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Skills</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Front-End</h3>
 									<div className='skills' style='display: flex;' >
-										<div className='right'>
-											<p>• HTML5</p>
-											<p>• CSS3</p>
-											<p>• JavaScript</p>
+											<div className='right'>
+												<p>• HTML5</p>
+												<p>• CSS3</p>
+												<p>• JavaScript</p>
 										</div>
 										<div className='left' style='margin-left: 35%;'>
 											<p>• React.js</p>
@@ -108,16 +107,16 @@
 								<section>
 									<span class="icon solid major fa-database"></span>
 									<h3>Back-End</h3>
-										<p>• Node.js</p>
-										<p>• Express.js</p>
-										<p>• Knex.js</p>
+									<p>• Node.js</p>
+									<p>• Express.js</p>
+									<p>• Knex.js</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-laptop-code"></span>
 									<h3>DevOps</h3>
-										<p>• Netlify</p>
-										<p>• Heroku</p>
-										<p>• Zeit</p>
+									<p>• Netlify</p>
+									<p>• Heroku</p>
+									<p>• Zeit</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -128,13 +127,17 @@
 												<p>• Responsive</p>
 											</div>
 											<div className='left' style='margin-left: 35%;'>
-												<p>• Creative</p>
-												<p>• Dynamic</p>
+													<p>• Creative</p>
+													<p>• Dynamic</p>
+												</div>
 											</div>
-										</div>
-								</section>
-							</div>
-						</div>
+										</section>
+									</div>
+									<div style='display: flex;' >
+										<h2 style='margin-right: 10%;'>Resume</h2>
+										<a href='images/resume.pdf' download class="icon solid major fa-download"></a>
+									</div>
+								</div>
 					</section>
 
 				<!-- Three -->
